centered,rezized, redux, env, imgPreview

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 FIREBASE_CONTENT_KEY=AIzaSyCkGXTmizLIeybjDyCunytGuiDqGczLxq4
+FIREBASE_AUTH_DOMAIN=thecubanshow-d5b0d.firebaseapp.com
+FIREBASE_PROJECT_ID=thecubanshow-d5b0d
+FIREBASE_STORAGE_BUCKET=thecubanshow-d5b0d.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=706337216858
+FIREBASE_API_ID=1:706337216858:web:fdfa465a85555fa1f33b63
+FIREBASE_MESSUREMENT_ID=G-BN4GNTD1RM
