--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-FIREBASE_CONTENT_KEY=AIzaSyCkGXTmizLIeybjDyCunytGuiDqGczLxq4
-FIREBASE_AUTH_DOMAIN=thecubanshow-d5b0d.firebaseapp.com
-FIREBASE_PROJECT_ID=thecubanshow-d5b0d
-FIREBASE_STORAGE_BUCKET=thecubanshow-d5b0d.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=706337216858
-FIREBASE_API_ID=1:706337216858:web:fdfa465a85555fa1f33b63
-FIREBASE_MESSUREMENT_ID=G-BN4GNTD1RM
+REACT_APP_FIREBASE_CONTENT_KEY=AIzaSyCkGXTmizLIeybjDyCunytGuiDqGczLxq4
+REACT_APP_FIREBASE_AUTH_DOMAIN=thecubanshow-d5b0d.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=thecubanshow-d5b0d
+REACT_APP_FIREBASE_STORAGE_BUCKET=thecubanshow-d5b0d.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=706337216858
+REACT_APP_FIREBASE_API_ID=1:706337216858:web:fdfa465a85555fa1f33b63
+REACT_APP_FIREBASE_MESSUREMENT_ID=G-BN4GNTD1RM
