Cookies are working

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=thecubanshow-d5b0d.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=706337216858
 REACT_APP_FIREBASE_API_ID=1:706337216858:web:fdfa465a85555fa1f33b63
 REACT_APP_FIREBASE_MESSUREMENT_ID=G-BN4GNTD1RM
+REACT_APP_ADMIN_PASSWORD=Abcd1234
