--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "firebase": "^9.17.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "@reduxjs/toolkit": "^1.8.5",
-    "react-redux": "^8.0.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
