--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,21 @@
 {
   "short_name": "The Cuban Show",
-  "name": "The Cuban Show",
+  "name": "The Cuban Show, nothing but the truth",
   "icons": [
     {
       "src": "micro.png",
-      "type": "image/png"
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "micro.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "micro.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     }
   ],
   "start_url": ".",
