--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,14 @@
 {
   "short_name": "The Cuban Show",
   "name": "The Cuban Show, nothing but the truth",
-  "icons": [
-    {
-      "src": "micro.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "micro.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "micro.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#282c34",
+  "theme_color": "#282c34",
+  "description": "Your feeding uncensored articles",
+  "icons": [{
+    "src": "./micro.png",
+    "sizes": "61x61",
+    "type": "image/png"
+  }],
+  "start_url": "/?source=pwa",
+  "display": "standalone"
 }
