--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,7 @@
     "sizes": "61x61",
     "type": "image/png"
   }],
+  "id":"/?source=pwa",
   "start_url": "/?source=pwa",
   "display": "standalone"
 }
