--- a/public/site.webmanifest.json
+++ b/public/site.webmanifest.json
@@ -16,7 +16,8 @@
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
-  "start_url": "/?source=pwa"
+  "start_url": "/",
+  "scope": "." 
 }
 
 
