--- a/public/site.webmanifest.json
+++ b/public/site.webmanifest.json
@@ -16,7 +16,7 @@
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
-  "start_url": "/",
+  "start_url": "https://the-cuban-show-development.netlify.app/",
   "scope": "." 
 }
 
