change of name test

--- a/public/site.webmanifest.json
+++ b/public/site.webmanifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "The Cuban Show",
+  "name": "The Cuban Show, nothing but the truth",
   "short_name": "The Cuban Show",
   "icons": [
     {
